Fix drag and drop z-index

--- a/client/views/users/member.styl
+++ b/client/views/users/member.styl
@@ -23,7 +23,7 @@
     width: 50px;
     cursor: pointer;
     user-select: none;
-    z-index: 0;
+    z-index: 1;
     text-decoration: none;
 
     .avatar-initials {
